--- a/package.json
+++ b/package.json
@@ -7,12 +7,21 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "fmt": "prettier --write --plugin-search-dir=. \"**/{*.mjs,*.js,*.jsx,*.ts,*.tsx,*.astro}\""
   },
   "dependencies": {
-    "astro": "^1.1.5",
     "@astrojs/mdx": "^0.11.1",
     "@astrojs/rss": "^1.0.0",
-    "@astrojs/sitemap": "^1.0.0"
+    "@astrojs/sitemap": "^1.0.0",
+    "astro": "^1.1.5"
+  },
+  "devDependencies": {
+    "@unocss/preset-attributify": "^0.45.14",
+    "@unocss/preset-web-fonts": "^0.45.14",
+    "@unocss/preset-wind": "^0.45.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-astro": "^0.5.4",
+    "unocss": "^0.45.14"
   }
 }
