--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^1.1.5"
   },
   "devDependencies": {
+    "@astrojs/image": "^0.5.0",
     "@unocss/preset-attributify": "^0.45.14",
     "@unocss/preset-web-fonts": "^0.45.14",
     "@unocss/preset-wind": "^0.45.14",
