Use UnoCSS Typography plugin

--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "devDependencies": {
     "@astrojs/image": "^0.5.0",
+    "@iconify-json/tabler": "^1.1.30",
     "@unocss/preset-attributify": "^0.45.14",
+    "@unocss/preset-icons": "^0.45.15",
+    "@unocss/preset-typography": "^0.45.15",
     "@unocss/preset-web-fonts": "^0.45.14",
     "@unocss/preset-wind": "^0.45.14",
     "prettier": "^2.7.1",
